# AutoSRE-OIIA_OIIA

./: .gitignore  DEMO.md  README.md  SUPERPLANE_DEMO.md  TEST.md  demo_backup_plans.md  demo_hackathon.sh  docker-compose.dev.yml  docker-compose.yml  judge_demo_checklist.md  judge_demo_setup.sh  makefile  shell.nix  stress.sh  superplane_canvas_config.md  superplane_demo.sh  test_gemini.py  todo.md
backend/: .dockerignore  .env.example  Dockerfile  TRIGGER_SERVICE.md  alembic.ini  api_server.py  package-lock.json  pyproject.toml  requirements.txt  simulate-k8s-incidents.sh  start-dev.sh
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: cluster.py  execute.py  incidents.py  router.py  webhooks.py
backend/app/core/: database.py  redis.py  whitelist.py
backend/app/models/: __init__.py  action_log.py  analysis.py  incident.py
backend/app/schemas/: action.py  analysis.py  incident.py
backend/app/services/: ai_engine.py  audit.py  event_poller.py  kubernetes.py  remediation.py  risk_engine.py
backend/app/tasks/: __init__.py  queue.py
backend/src/oncall_agent/: agent.py  agent_enhanced.py  agno_kubernetes_agent.py  config.py  main.py  metrics.py
backend/src/oncall_agent/api/: dependencies.py  oncall_agent_trigger.py  webhooks.py
backend/src/oncall_agent/caching/: cache_manager.py
backend/src/oncall_agent/mcp_integrations/: kubernetes_agno_mcp.py
backend/src/oncall_agent/monitoring/: monitoring_system.py
backend/tests/: conftest.py  test_api.py  test_event_poller.py
docs/: bugs.md  ci-cd-setup.md  (+2 more)
(+65 files in other folders)
